# simple-plain-coder

./: .gitignore  README-DEV.md  README.md  app.py  coder.py  command_core.py  command_handlers.py  commands.py  config_core.py  config_io.py  config_utils.py  llm_client.py  llm_core.py  main.py  prompt_core.py  prompt_io.py  prompt_utils.py  pyproject.toml  system-prompt.md  template.txt
.simple-plain-coder/: coders.toml  config.toml  mcp-servers.yaml
